--- a/packages/main/src/themes/StepInput.css
+++ b/packages/main/src/themes/StepInput.css
@@ -343,3 +343,12 @@
 	box-shadow: var(--_ui5_input_success_icon_box_shadow);
 	color: var(--_ui5_input_icon_success_pressed_color);
 }
+
+:host([value-state="Error"]) [input-icon],
+:host([value-state="Warning"]) [input-icon]{
+	padding: var(--_ui5_input_error_warning_icon_padding);
+}
+
+:host([value-state="Information"]) [input-icon] {
+	padding: var(--_ui5_input_information_icon_padding);
+}
